@@ -1,4 +1,8 @@
 For 1.20.2
+	- cleanup OSX build; remove redundant installed code from dmg.
+
+	- comment out movie-snapshot code, pending rethink.
+
 	- OSX running within Safari; speaking error messages sometimes hung safari; use
 	  "freewrlSystem" call now, instead of "system" - seems to work well. Messages
 	  also copied to the console.
